@@ -37,3 +37,4 @@ Jérôme Pinot <ngc891@gmail.com>
 Rafael Antognolli <antognolli@profusion.mobi>
 Daniel Zaoui <daniel.zaoui@samsung.com>
 Christophe Sadoine <chris@indefini.org>
+Igor Murzov <e-mail@date.by>
